--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -6,6 +6,7 @@
             </head>
             <body>
               <p>Hola mi vida ♥</p>
+              <p>holi</p>
               <p>¡Te Amo!</p>
                 <div>
                     <h1><a href="">Django Girls Blog</a></h1>
