--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -8,6 +8,15 @@
               <p>Hola mi vida ♥</p>
               <p>holi</p>
               <p>¡Te Amo!</p>
+
+              {% for post in posts %}
+        <div>
+            <p>published: {{ post.published_date }}</p>
+            <h1><a href="">{{ post.title }}</a></h1>
+            <p>{{ post.text|linebreaksbr }}</p>
+        </div>
+    {% endfor %}
+
                 <div>
                     <h1><a href="">Django Girls Blog</a></h1>
                 </div>
